--- a/buyer.html
+++ b/buyer.html
@@ -28,9 +28,7 @@ padding:15px;
 text-align:center;
 }
 
-.logo{
-height:50px;
-}
+.logo{height:50px;}
 
 .filter-bar{
 padding:10px;
@@ -69,10 +67,7 @@ object-fit:cover;
 border-radius:8px;
 }
 
-.section{
-display:none;
-padding:10px;
-}
+.section{display:none;padding:10px;}
 
 .btn{
 background:#ff4081;
@@ -87,11 +82,16 @@ cursor:pointer;
 
 .cart-item{
 background:#171a21;
-padding:10px;
+padding:12px;
 margin-top:10px;
-border-radius:8px;
-display:flex;
-justify-content:space-between;
+border-radius:10px;
+}
+
+.invoice{
+background:#171a21;
+padding:15px;
+margin-top:10px;
+border-radius:10px;
 }
 
 .bottom{
@@ -111,12 +111,12 @@ cursor:pointer;
 }
 
 .avatar{
-width:120px;
-height:120px;
+width:130px;
+height:130px;
 border-radius:50%;
+border:3px solid #ff4081;
 object-fit:cover;
 cursor:pointer;
-border:3px solid #ff4081;
 }
 
 </style>
@@ -131,55 +131,51 @@ border:3px solid #ff4081;
 </div>
 
 <div id="filterSection" class="filter-bar">
-
-<input id="search" placeholder="Search"
-oninput="searchProducts()">
-
+<input id="search" placeholder="Search" oninput="searchProducts()">
 <select onchange="applyFilter(this.value)">
 <option value="new">Newest</option>
 <option value="low">Low Price</option>
 <option value="high">High Price</option>
 </select>
-
 </div>
 
 <div id="home" class="products"></div>
 
 <div id="detail" class="section"></div>
 
-<!-- CART -->
 
+<!-- CART -->
 <div id="cart" class="section">
 
 <h2>Cart</h2>
 
 <div id="cartItems"></div>
 
-<br>
+<div class="invoice">
 
 Subtotal ₹<span id="subtotal">0</span><br>
 Delivery ₹<span id="delivery">0</span><br>
 GST ₹<span id="gst">0</span><br>
 Discount ₹<span id="discount">0</span><br>
 
-<h3>Total ₹<span id="grandTotal">0</span></h3>
+<hr>
 
-<select id="addressSelect"></select>
-
-<input id="couponInput" placeholder="Coupon">
-
-<button class="btn" onclick="applyCoupon()">
-Apply Coupon
-</button>
-
-<button class="btn" onclick="placeOrder()">
-Place Order
-</button>
+<b>Total ₹<span id="grandTotal">0</span></b>
 
 </div>
 
-<!-- PROFILE -->
+<select id="addressSelect"></select>
 
+<input id="couponInput" placeholder="Enter coupon">
+
+<button class="btn" onclick="applyCoupon()">Apply Coupon</button>
+
+<button class="btn" onclick="placeOrder()">Place Order</button>
+
+</div>
+
+
+<!-- PROFILE -->
 <div id="profile" class="section">
 
 <h2>Profile</h2>
@@ -189,31 +185,25 @@ Place Order
 <img id="avatar"
 class="avatar"
 src="default-avatar.png"
-onclick="avatarUpload.click()">
+onclick="avatarFile.click()">
 
 <input type="file"
-id="avatarUpload"
+id="avatarFile"
 hidden
 onchange="uploadAvatar(event)">
 
 </center>
 
-<br>
-
 <input id="nameInput" placeholder="Name">
 <input id="phoneInput" placeholder="Phone">
 
-<button class="btn" onclick="saveProfile()">
-Save Profile
-</button>
+<button class="btn" onclick="saveProfile()">Save Profile</button>
 
 <h3>Addresses</h3>
 
 <input id="addressInput" placeholder="Address">
 
-<button class="btn" onclick="saveAddress()">
-Save Address
-</button>
+<button class="btn" onclick="saveAddress()">Save Address</button>
 
 <div id="addressList"></div>
 
@@ -221,31 +211,29 @@ Save Address
 
 <div id="ordersList"></div>
 
-<button class="btn" onclick="logout()">
-Logout
-</button>
+<button class="btn" onclick="logout()">Logout</button>
 
 </div>
 
-<div class="bottom">
 
+<div class="bottom">
 <div onclick="showHome()">Home</div>
 <div onclick="showCart()">Cart</div>
 <div onclick="showProfile()">Profile</div>
-
 </div>
 
 </div>
+
 
 <script>
 
-/* SUPABASE CONNECTION */
+/* SUPABASE INIT */
 
-const supabaseClient =
-window.supabase.createClient(
+const supabase = window.supabase.createClient(
 "https://lssjsgfppehhclxqulso.supabase.co",
 "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imxzc2pzZ2ZwcGVoaGNseHF1bHNvIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzExOTAwNzksImV4cCI6MjA4Njc2NjA3OX0.nRq1iFBiOEyty0ALRmS45ARoso7BsB0ENOvttu7nvX0"
 );
+
 
 /* USER */
 
@@ -255,11 +243,12 @@ if(!user){
 location="index.html";
 }
 
-/* GLOBAL */
 
 let cartData=[];
 let discountAmount=0;
+let appliedCoupon=null;
 let currentProduct=null;
+
 
 /* NAV */
 
@@ -273,6 +262,7 @@ filterSection.style.display="none";
 
 }
 
+
 /* HOME */
 
 async function showHome(){
@@ -282,15 +272,14 @@ hideAll();
 home.style.display="grid";
 filterSection.style.display="flex";
 
-const {data} =
-await supabaseClient
+const {data}=await supabase
 .from("products")
-.select("*")
-.order("created_at",{ascending:false});
+.select("*");
 
-renderProducts(data);
+renderProducts(data||[]);
 
 }
+
 
 function renderProducts(data){
 
@@ -299,15 +288,10 @@ home.innerHTML="";
 data.forEach(p=>{
 
 home.innerHTML+=`
-<div class="card"
-onclick="showDetail('${p.id}')">
-
+<div class="card" onclick="showDetail('${p.id}')">
 <img src="${p.image_url}">
-
 <div>${p.name}</div>
-
 ₹${p.price}
-
 </div>
 `;
 
@@ -315,43 +299,6 @@ onclick="showDetail('${p.id}')">
 
 }
 
-/* SEARCH */
-
-async function searchProducts(){
-
-const {data} =
-await supabaseClient
-.from("products")
-.select("*")
-.ilike("name","%"+search.value+"%");
-
-renderProducts(data);
-
-}
-
-/* FILTER */
-
-async function applyFilter(type){
-
-let query =
-supabaseClient
-.from("products")
-.select("*");
-
-if(type=="low")
-query=query.order("price",{ascending:true});
-
-if(type=="high")
-query=query.order("price",{ascending:false});
-
-if(type=="new")
-query=query.order("created_at",{ascending:false});
-
-const {data}=await query;
-
-renderProducts(data);
-
-}
 
 /* DETAIL */
 
@@ -361,8 +308,7 @@ hideAll();
 
 detail.style.display="block";
 
-const {data} =
-await supabaseClient
+const {data}=await supabase
 .from("products")
 .select("*")
 .eq("id",id)
@@ -378,22 +324,20 @@ detail.innerHTML=`
 
 ₹${data.price}
 
-<button class="btn"
-onclick="addCart()">Add Cart</button>
+<button class="btn" onclick="addCart()">Add Cart</button>
 
-<button class="btn"
-onclick="showHome()">Back</button>
+<button class="btn" onclick="showHome()">Back</button>
 
 `;
 
 }
 
+
 /* ADD CART */
 
 async function addCart(){
 
-const {data:exist} =
-await supabaseClient
+const {data:exist}=await supabase
 .from("cart")
 .select("*")
 .eq("user_email",user.email)
@@ -402,16 +346,15 @@ await supabaseClient
 
 if(exist){
 
-await supabaseClient
+await supabase
 .from("cart")
-.update({
-qty:exist.qty+1
-})
+.update({qty:exist.qty+1})
 .eq("id",exist.id);
 
-}else{
+}
+else{
 
-await supabaseClient
+await supabase
 .from("cart")
 .insert({
 user_email:user.email,
@@ -425,6 +368,7 @@ showCart();
 
 }
 
+
 /* SHOW CART */
 
 async function showCart(){
@@ -433,23 +377,18 @@ hideAll();
 
 cart.style.display="block";
 
-const {data} =
-await supabaseClient
+const {data}=await supabase
 .from("cart")
-.select(`
-id,
-qty,
-products(name,price)
-`)
+.select(`id,qty,product_id,products(name,price)`)
 .eq("user_email",user.email);
 
-cartData=data;
+cartData=data||[];
 
 let sub=0;
 
 cartItems.innerHTML="";
 
-data.forEach(i=>{
+cartData.forEach(i=>{
 
 let price=i.qty*i.products.price;
 
@@ -457,13 +396,9 @@ sub+=price;
 
 cartItems.innerHTML+=`
 <div class="cart-item">
-
 ${i.products.name} x ${i.qty}
-
-₹${price}
-
-<button onclick="removeCart('${i.id}')">X</button>
-
+<br>₹${price}
+<button onclick="removeCart('${i.id}')">Delete</button>
 </div>
 `;
 
@@ -471,36 +406,35 @@ ${i.products.name} x ${i.qty}
 
 calculateTotals(sub);
 
-loadCoupons();
-
 loadAddresses();
 
 }
+
 
 /* TOTAL */
 
 function calculateTotals(sub){
 
-let del=sub===0?0:50;
+let delivery=sub===0?0:50;
 
 let gst=sub*0.05;
 
-let total=sub+del+gst-discountAmount;
+let total=sub+delivery+gst-discountAmount;
 
-document.getElementById("subtotal").innerText=sub;
-document.getElementById("delivery").innerText=del;
-document.getElementById("gst").innerText=gst;
-document.getElementById("discount").innerText=discountAmount;
-document.getElementById("grandTotal").innerText=total;
+subtotal.innerText=sub.toFixed(2);
+delivery.innerText=delivery.toFixed(2);
+gst.innerText=gst.toFixed(2);
+discount.innerText=discountAmount.toFixed(2);
+grandTotal.innerText=total.toFixed(2);
 
 }
 
-/* REMOVE CART */
+
+/* REMOVE */
 
 async function removeCart(id){
 
-await supabaseClient
-.from("cart")
+await supabase.from("cart")
 .delete()
 .eq("id",id);
 
@@ -508,39 +442,35 @@ showCart();
 
 }
 
-/* COUPONS */
 
-async function loadCoupons(){
-
-const {data} =
-await supabaseClient
-.from("coupons")
-.select("*");
-
-couponInput.placeholder=
-"Available: "+
-data.map(c=>c.code).join(", ");
-
-}
+/* COUPON */
 
 async function applyCoupon(){
 
-const code=couponInput.value;
+let code=couponInput.value.trim();
 
-const {data} =
-await supabaseClient
+if(!code){
+alert("Enter coupon");
+return;
+}
+
+const {data}=await supabase
 .from("coupons")
 .select("*")
 .eq("code",code)
 .maybeSingle();
 
 if(!data){
-
 alert("Invalid coupon");
-
 return;
-
 }
+
+if(data.usage_limit && data.used_count>=data.usage_limit){
+alert("Coupon expired");
+return;
+}
+
+appliedCoupon=data;
 
 discountAmount=data.discount;
 
@@ -548,39 +478,71 @@ showCart();
 
 }
 
+
 /* PLACE ORDER */
 
 async function placeOrder(){
 
 if(cartData.length===0){
-
 alert("Cart empty");
-
 return;
-
 }
 
 let orderId="ORD"+Date.now();
 
-await supabaseClient
-.from("orders")
-.insert({
+let total=parseFloat(grandTotal.innerText);
+
+await supabase.from("orders").insert({
 id:orderId,
 user_email:user.email,
-price:grandTotal.innerText,
+price:total,
 status:"Placed"
 });
 
-await supabaseClient
+
+for(const item of cartData){
+
+await supabase.from("order_items").insert({
+
+order_id:orderId,
+product_id:item.product_id,
+qty:item.qty,
+price:item.products.price
+
+});
+
+}
+
+
+/* increase coupon usage */
+if(appliedCoupon){
+
+await supabase
+.from("coupons")
+.update({
+used_count:appliedCoupon.used_count+1
+})
+.eq("code",appliedCoupon.code);
+
+}
+
+
+/* clear cart */
+
+await supabase
 .from("cart")
 .delete()
 .eq("user_email",user.email);
 
-alert("Order placed");
+
+alert("Order placed successfully");
+
+discountAmount=0;
 
 showProfile();
 
 }
+
 
 /* PROFILE */
 
@@ -592,16 +554,16 @@ profile.style.display="block";
 
 loadProfile();
 
-loadOrders();
-
 loadAddresses();
+
+loadOrders();
 
 }
 
+
 async function loadProfile(){
 
-const {data} =
-await supabaseClient
+const {data}=await supabase
 .from("users")
 .select("*")
 .eq("email",user.email)
@@ -617,19 +579,25 @@ avatar.src=data.avatar_url||"default-avatar.png";
 
 }
 
+
+/* SAVE PROFILE */
+
 async function saveProfile(){
 
-await supabaseClient
+await supabase
 .from("users")
 .upsert({
+
 email:user.email,
 name:nameInput.value,
 phone:phoneInput.value
+
 });
 
 alert("Saved");
 
 }
+
 
 /* AVATAR */
 
@@ -637,45 +605,41 @@ async function uploadAvatar(e){
 
 const file=e.target.files[0];
 
-const fileName=user.email+Date.now();
+if(!file)return;
 
-await supabaseClient.storage
+const fileName=user.email+"-"+Date.now();
+
+await supabase.storage
 .from("avatars")
-.upload(fileName,file);
+.upload(fileName,file,{upsert:true});
 
-const {data} =
-supabaseClient.storage
+const {data}=supabase.storage
 .from("avatars")
 .getPublicUrl(fileName);
 
 avatar.src=data.publicUrl;
 
-await supabaseClient
+await supabase
 .from("users")
-.update({
-avatar_url:data.publicUrl
-})
+.update({avatar_url:data.publicUrl})
 .eq("email",user.email);
 
 }
+
 
 /* ADDRESS */
 
 async function saveAddress(){
 
-navigator.geolocation.getCurrentPosition(
+navigator.geolocation.getCurrentPosition(async pos=>{
 
-async pos=>{
+let gps=pos.coords.latitude+","+pos.coords.longitude;
 
-let gps=
-pos.coords.latitude+
-","+pos.coords.longitude;
+await supabase.from("addresses").insert({
 
-await supabaseClient
-.from("addresses")
-.insert({
 user_email:user.email,
 address:addressInput.value+" GPS:"+gps
+
 });
 
 loadAddresses();
@@ -684,10 +648,10 @@ loadAddresses();
 
 }
 
+
 async function loadAddresses(){
 
-const {data} =
-await supabaseClient
+const {data}=await supabase
 .from("addresses")
 .select("*")
 .eq("user_email",user.email);
@@ -695,11 +659,12 @@ await supabaseClient
 addressList.innerHTML="";
 addressSelect.innerHTML="";
 
-data.forEach(a=>{
+(data||[]).forEach(a=>{
 
 addressList.innerHTML+=`
 <div class="cart-item">
 ${a.address}
+<button onclick="deleteAddress('${a.id}')">Delete</button>
 </div>
 `;
 
@@ -711,30 +676,46 @@ addressSelect.innerHTML+=`
 
 }
 
-/* ORDERS */
+
+/* ORDERS + INVOICE */
 
 async function loadOrders(){
 
-const {data} =
-await supabaseClient
+const {data}=await supabase
 .from("orders")
 .select("*")
-.eq("user_email",user.email);
+.eq("user_email",user.email)
+.order("created_at",{ascending:false});
 
 ordersList.innerHTML="";
 
-data.forEach(o=>{
+for(const order of data||[]){
+
+const {data:items}=await supabase
+.from("order_items")
+.select(`qty,price,products(name)`)
+.eq("order_id",order.id);
 
 ordersList.innerHTML+=`
-<div class="cart-item">
-${o.id}
-₹${o.price}
+<div class="invoice">
+
+<b>Order ID:</b> ${order.id}<br>
+<b>Total:</b> ₹${order.price}<br>
+
+<hr>
+
+${items.map(i=>`
+${i.products.name} x ${i.qty}
+₹${i.qty*i.price}
+`).join("<br>")}
+
 </div>
 `;
 
-});
+}
 
 }
+
 
 /* LOGOUT */
 
@@ -745,6 +726,7 @@ localStorage.removeItem("user");
 location="index.html";
 
 }
+
 
 /* START */
 
