--- a/buyer.html
+++ b/buyer.html
@@ -494,7 +494,7 @@ select option{background:#1a1d26;}
   <!-- HEADER -->
   <div class="header">
     <div class="header-logo">
-      <div class="header-logo-icon">🌸</div>
+      <div class="header-logo-icon"><img src="HeaderLogo.png" class="logo" alt="PetalRush"></div>
       <div>
         <div class="header-logo-text">PetalRush</div>
         <div class="header-logo-sub">Fresh Flowers · Fast Delivery</div>
