--- a/buyer.html
+++ b/buyer.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>PetalRush Buyer</title>
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
+<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet">
 
 <style>
 *{box-sizing:border-box;margin:0;padding:0;}
@@ -37,7 +37,6 @@ body{
 
 .header-logo{
   display:flex;
-  height:50px;
   align-items:center;
   justify-content:center;
   gap:10px;
@@ -495,7 +494,7 @@ select option{background:#1a1d26;}
   <!-- HEADER -->
   <div class="header">
     <div class="header-logo">
-      <div class="header-logo-icon"><img src="HeaderLogo.png" class="logo" alt="PetalRush"></div>
+      <div class="header-logo-icon">🌸</div>
       <div>
         <div class="header-logo-text">PetalRush</div>
         <div class="header-logo-sub">Fresh Flowers · Fast Delivery</div>
